# data-inclusion

./: .cursorignore  .flake8  .gitignore  .pre-commit-config.yaml  .template.env  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  Procfile  README.md  alembic.ini  cron.json  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  iframe.html  pyproject.toml  requirements.in  requirements.mk  requirements.txt  setup.py  test-s3.py  tox.ini  uwsgi.ini  widget.html
analyse/: .gitattributes  .gitconfig  .gitignore  .template.env  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
analyse/notebooks/: template.ipynb  test_api.ipynb
analyse/notebooks/1j1s/: benefits.ipynb
analyse/notebooks/agefiph/: api-services.ipynb
analyse/notebooks/cd35/: annuaire_social.ipynb
analyse/notebooks/cd62/: analyse-cd62.ipynb
analyse/notebooks/cd72/: analyse.ipynb
analyse/notebooks/cd93/: analyse.ipynb
analyse/notebooks/cog_insee/: import_cog_seeds.ipynb
analyse/notebooks/deduplication/: id_doublons.ipynb
analyse/notebooks/documentation/: sources.ipynb  sources.md  sources.md.j2
analyse/notebooks/etablissements-publics/: analyse.ipynb  croisement-20230201.ipynb
analyse/notebooks/extract_grist/: extract_grist.ipynb
analyse/notebooks/finess/: analyse.ipynb
analyse/notebooks/grist/: template.ipynb
analyse/notebooks/mes-aides/: garages-solidaires.ipynb
analyse/notebooks/monenfant/: extract.ipynb  monenfant.ipynb
analyse/notebooks/odspep/: analyse-novembre.ipynb  analyse.ipynb  normalize-2023.ipynb  normalize.ipynb
analyse/notebooks/reseau-alpha/: .gitignore  extract.ipynb
analyse/notebooks/rgpd_emailing/: emailing.ipynb
analyse/notebooks/siao/: analyse.ipynb
analyse/notebooks/siretisation/: dila_mairies.ipynb
analyse/notebooks/soliguide/: .gitignore  analyse.ipynb  analyse_2023.ipynb  croisement_siae_emploi.ipynb  siae.ipynb  soliguide.py
analyse/requirements/: requirements.txt
api/: .flake8  .template.env  CONTRIBUTING.md  Dockerfile  Makefile  Procfile  README.md  USAGE.md  alembic.ini  cron.json  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  execute_and_notify.sh  locustfile.py  log.txt  pyproject.toml  requirements.txt  setup.py  sources.json  tox.ini
api/requirements/: dev-requirements.txt  requirements.txt  test-requirements.txt
api/scripts/: export_analytics.py
api/src/alembic/: env.py
api/tests/: communes.json  communes.parquet  communes.parquet.gzip  conftest.py  factories.py  test_api.py  test_request.py  test_services.py  test_token.py
api/tests/__snapshots__/: test_api.ambr
api/tests/core/: test_request.py  test_token.py
api/tests/e2e/: conftest.py
api/tests/factories/: __init__.py  v0.py  v1.py
api/tests/fixtures/: dataset.xlsx
api/tests/inclusion/: conftest.py  factories.py  test_api.py
api/tests/unit/: conftest.py  test_analytics.py  test_auth.py  test_commands.py  test_pagination.py  test_valideur.py  test_widget.py
datawarehouse/processings/: Makefile  dedup_asp_to_ft.py  dedup_asp_to_ft_postprocessing.py  dedup_mba_to_sirene.py  dedup_nexus.py  ft_asp_structures_dedupe.xlsx  parse_if.py  parse_marche.py  pyproject.toml  tox.ini
datawarehouse/processings/requirements/: dev-requirements.txt  requirements.txt  test-requirements.txt
datawarehouse/processings/scripts/: create_udfs.sh
deduplication/: .gitignore  README.md  labels.json  main.ipynb  metadata.json  pyproject.toml
deduplication/requirements/: dev-requirements.txt  requirements.txt  test-requirements.txt
deduplication/src/: interactive_train.py  preprocess_structures.py
deduplication/tests/: conftest.py  test_deduper.py
pipeline/: .buildpacks  .dockerignore  .env.template  .flake8  .gitignore  .sqlfluffignore  .template.env  CONTRIBUTING.md  Dockerfile  Procfile  README.md  RGPD.md  airflow.sh  defaults.env  docker-compose.yml  entrypoint.sh  pgsql_big_dedupe_example.py  pyproject.toml  requirements.in  requirements.txt  setup.py  tox.ini
pipeline/dags/: .airflowignore  backup_datawarehouse.py  compute_hourly.py  import_admin_express.py  import_api_analytics.py  import_brevo.py  import_data_inclusion_api.py  import_decoupage_administratif.py  import_etat_civil.py  import_immersion_facilitee.py  import_insee_code_officiel_geographique.py  import_insee_firstnames.py  import_insee_naf.py  import_insee_prenoms.py  import_monenfant.py  import_odspep.py  import_sirene.py  import_soliguide.py  import_sources.py  load_api_analytics.py  main.py  mattermost.py  monitor.py  notify_rgpd_contacts.py  probe_api.py  publish.py  rollout.py  settings.py  setup.py  sync_cities.py  virtualenvs.py
pipeline/dags/common/: helpers.py  pg.py  tasks.py
pipeline/dags/dag_utils/: constants.py  date.py  dbt.py  dedupe.py  geocoding.py  marts.py  notifications.py  pg.py  s3.py  sentry.py  settings.py  sources.py  virtualenvs.py
pipeline/dags/dags/: dbt.py  notifications.py  settings.py  virtualenvs.py
pipeline/dags/sql/: compute_flux.sql  flag_personal_emails.sql  join_dwh_sirene.sql  rollout.sql  setup.sql
pipeline/dbt/: .user.yml  CONTRIBUTING.md  dbt_project.yml  profiles.yml
pipeline/dbt/macros/: checks.sql  create_udfs.sql  grant_select_on_schemas.sql  marts_inclusion__unnest_jsonb_list_to_table.sql  obfuscate.sql  slugify.sql  stg_source_header.sql  truncate_text.sql  unnest.sql
pipeline/dbt/models/: _sources.yml  datalake.sql  datalake.yml  flux.sql  flux.yml
pipeline/dbt/snapshots/: benefits.sql
pipeline/docker/airflow/: Dockerfile
pipeline/docs/img/: architecture-data-inclusion.drawio  data-inclusion.drawio
pipeline/poc_polars/: CONTRIBUTING.md  README.md  pyproject.toml
pipeline/poc_polars/staging/: soliguide.py
pipeline/requirements/: Makefile  constraints.txt  dev-requirements.in  dev-requirements.txt  requirements.in  requirements.txt
pipeline/requirements/airflow/: base.in  constraints.txt  requirements.in  requirements.txt
pipeline/requirements/dev/: requirements.in  (+1 more)
pipeline/scripts/: compare.py  update_schema_seeds.py
pipeline/sqlmesh/: .gitignore  config.py  schema.yaml
(+1290 files in other folders)
