[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "data-inclusion-analyse"
dependencies = [
    "notebook~=7.2",
]

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.isort]
section-order = ["future","standard-library","third-party","first-party","local-folder"]
combine-as-imports = true
known-first-party = ["data_inclusion"]
