[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    # Do not enable bandit yet as too many violations are reported.
    # "S",  # bandit
]

[tool.ruff.lint.isort]
section-order = ["future","standard-library","third-party","fastapi","first-party","local-folder"]
combine-as-imports = true
known-first-party = ["data_inclusion"]

[tool.ruff.lint.isort.sections]
fastapi = ["fastapi", "fastapi_pagination"]

[tool.pytest.ini_options]
markers = '''
    with_token: inject token headers in test client
    with_admin_token: inject admin token headers in test client
'''
testpaths = "tests"
