[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "data-inclusion-dedupe"
version = "0.1.0"
dependencies = [
    "sqlalchemy",
    "psycopg2",
    "dedupe",
    "dedupe-variable-datetime",
    "unidecode",
    "numpy~=2.0",
    "pandas~=2.2",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]
test = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
    "S",  # bandit
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.pytest.ini_options]
testpaths = "tests"
