[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.isort]
atomic = true
combine_star = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
indent = 4
known_first_party = "data_inclusion"
line_length = 88
multi_line_output = 3
profile = "black"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_gitignore = true
use_parentheses = true

[tool.black]
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = "tests"
markers = '''
    ban_api: mark test as requiring the base base adresse nationale api
'''

[tool.sqlfluff.core]
dialect = "postgres"
ignore = "templating"
exclude_rules = "L016"
templater = "dbt"

[tool.sqlfluff.layout.type.alias_expression]
# https://docs.sqlfluff.com/en/stable/layout.html#aligned-elements
# We want non-default spacing _before_ the alias expressions.
spacing_before = "align"
# We want to align them within the next outer select clause.
# This means for example that alias expressions within the FROM
# or JOIN clause would _not_ be aligned with them.
align_within = "select_clause"
# The point at which to stop searching outward for siblings, which
# in this example would likely be the boundary of a CTE. Stopping
# when we hit brackets is usually a good rule of thumb for this
# configuration.
align_scope = "bracketed"


[tool.sqlfluff.rules.L010]
# Keywords
capitalisation_policy = "upper"

[tool.sqlfluff.rules.L030]
# Function names
extended_capitalisation_policy = "upper"

[tool.sqlfluff.rules.L040]
# Null & Boolean Literals
capitalisation_policy = "upper"

[tool.sqlfluff.templater.dbt]
project_dir = "./pipeline/dbt"
profiles_dir = "./pipeline/dbt"
