[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "data-inclusion-processings"
version = "0.1.0"
dependencies = [
    "dedupe",
    "dedupe-variable-datetime",
    "furl",
    "numpy~=2.0",
    "pandas~=2.2",
    "phonenumbers",
    "requests~=2.31",
    "sib-api-v3-sdk",
    "unidecode",
    "data-inclusion-schema@git+https://github.com/gip-inclusion/data-inclusion-schema.git@9f088933c264290f92cff626512e2b7ca23ed444",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "tox",
]
test = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
    "S",  # bandit
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["data_inclusion"]

[tool.pytest.ini_options]
testpaths = "tests"
markers = '''
    ban_api: mark test as requiring the base base adresse nationale api
'''

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]
