[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "data-inclusion-processings"
version = "0.1.0"
dependencies = [
    "data-inclusion-schema",
    "dedupe",
    "dedupe-variable-datetime",
    "furl",
    "numpy~=2.0",
    "pandas~=2.2",
    "phonenumbers",
    "requests~=2.31",
    "sib-api-v3-sdk",
    "unidecode",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "tox",
]
test = [
    "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff.lint]
# see prefixes in https://beta.ruff.rs/docs/rules/
select = [
    "F",  # pyflakes
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "I",  # isort
    "UP",  # pyupgrade
    "S",  # bandit
]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["data_inclusion"]

[tool.pytest.ini_options]
testpaths = "tests"
markers = '''
    ban_api: mark test as requiring the base base adresse nationale api
'''

[tool.uv.sources]
data-inclusion-schema = { git = "https://github.com/gip-inclusion/data-inclusion-schema.git", rev = "vmttn/chore/v1-renommage-unccas" }

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["S101"]
